examples/pass/S-RNx.stl
/** S-RNx **/
global x; 
local l; 

/** Optimised **/ 
readN(x); 

/** Unoptimised **/ 
