examples/fail/RNx-S.stl
/** S-RNx **/
global x; 
local l; 

/** Optimised **/ 

/** Unoptimised **/ 
readN(x); 
